[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Early GameBoy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/crosshair.png" type="Texture" id=3]
[ext_resource path="res://Player/Fist3.png" type="Texture" id=4]
[ext_resource path="res://Player/Fist1.png" type="Texture" id=5]
[ext_resource path="res://Player/Fist2.png" type="Texture" id=6]

[sub_resource type="CapsuleShape" id=1]
height = 3.0

[sub_resource type="CylinderShape" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "punch",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 1, 2 )

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
shape = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="Debug" type="Label" parent="Head/Camera"]
margin_left = 15.0
margin_top = 14.0
margin_right = 261.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="Head/Camera/VBoxContainer"]
margin_top = 268.0
margin_right = 1024.0
margin_bottom = 332.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Fist" type="AnimatedSprite" parent="Head/Camera"]
position = Vector2( 705, 280 )
scale = Vector2( 5, 5 )
frames = SubResource( 4 )
animation = "idle"

[node name="HitBox" type="Area" parent="Head"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Head/HitBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
shape = SubResource( 5 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
[connection signal="animation_finished" from="Head/Camera/Fist" to="." method="_on_Fist_animation_finished"]
[connection signal="body_entered" from="Head/HitBox" to="." method="_on_HitBox_body_entered"]
